# document-batch-converter

./: LICENSE  README.md  pyproject.toml
docbatch/: __init__.py  __main__.py  cli.py  converter.py  models.py
docbatch/parsers/: __init__.py  base.py  docx_parser.py  pdf_parser.py  pptx_parser.py
examples/input/: climate_report.docx  marketing_strategy.pptx
examples/output/: climate_report_docx.json  climate_report_pdf.json  marketing_strategy_pptx.json
tests/: __init__.py  conftest.py  test_additional_coverage.py  test_cli.py  test_converter.py  test_models.py  test_parsers.py
