[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docbatch"
version = "1.0.0"
description = "A Python CLI tool that batch-converts PDF, DOCX, and PPTX files into structured JSON with section-aware text extraction"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Nguyen Trung Hieu", email = "hieunguyenst468@gmail.com"}
]
keywords = ["document", "converter", "cli", "pdf", "docx", "pptx", "json", "batch-processing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Text Processing",
    "Topic :: Utilities",
]
dependencies = [
    "pdfplumber>=0.10.4",
    "python-docx>=1.1.1",
    "python-pptx>=1.0.0",
    "openpyxl>=3.1.3",
    "tqdm>=4.66.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.13.0",
]

[project.scripts]
docbatch = "docbatch.cli:main"

[project.urls]
Homepage = "https://github.com/KZeyrox45/docbatch"
Repository = "https://github.com/KZeyrox45/docbatch"
Issues = "https://github.com/KZeyrox45/docbatch/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["docbatch*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=docbatch --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
source = ["docbatch"]
branch = true
omit = [
    "docbatch/__init__.py",
    "*/tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
